# parametric-survival

./: .gitignore  README.md  pyproject.toml
src/: config.py  demo.py  dist.py  eval.py  mapping.py  model.py  process.py  readme.py  synth.py  train.py  vis.py
